--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -12,6 +12,9 @@
 
     <!-- TODO #3 - Use the same list display from search.html -->
 
+    <div th:replace = "search :: searchBy"> hello</div>
+    <div th:replace ="search :: jobs">hello</div>
+
 </div>
 
 </body>
